--- a/main.html
+++ b/main.html
@@ -10,15 +10,15 @@
 <body>
     <!-- add table here -->
 <table width=100% border=1 cellspacing=4px;>
-		<thead>
-		<th bgcolor="yellow">
+		<thead bgcolor="blue">
+		
 		<td>Name</td>
 		<td>Kills</td>
 		<td>Saved</td>
 		<td>deaths</td>
 		<td>Revives</td>
 		<td>Win</td>
-		</th>
+		
 		</thead>
 	<tbody>
 		<tr>
